--- a/KamleonApp/app/src/main/res/layout/activity_home.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_home.xml
@@ -26,38 +26,54 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageView
-            android:id="@+id/im_home_kamleon"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/kamleon"
-            android:background="@color/transparent"
-            android:scaleType="fitStart"
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/layoutHeader"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="18dp"/>
-        <androidx.cardview.widget.CardView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="18dp"
-            android:id="@+id/cv_home_profile"
-            android:elevation="8dp">
-            <de.hdodenhof.circleimageview.CircleImageView
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/im_home_kamleon"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                app:srcCompat="@drawable/kamleon"
+                android:background="@color/transparent"
+                android:scaleType="fitStart"
+                android:layout_marginStart="@dimen/margin_horizontal_header"
+                android:layout_marginTop="@dimen/margin_top_header"
+                android:layout_marginBottom="@dimen/margin_bottom_header"
+                android:importantForAccessibility="no" />
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/image_profile"
-                android:id="@+id/iv_home_profile"
-                android:layout_gravity="center"/>
-        </androidx.cardview.widget.CardView>
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="@dimen/margin_horizontal_header"
+                android:layout_marginTop="@dimen/margin_top_header"
+                android:layout_marginBottom="@dimen/margin_bottom_header"
+                app:cardCornerRadius="18dp"
+                android:id="@+id/cv_home_profile"
+                android:elevation="8dp">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:src="@drawable/image_profile"
+                    android:id="@+id/iv_home_profile"
+                    android:layout_gravity="center"/>
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+
+
+
+
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/im_home_kamleon"
+            app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingHorizontal="28dp"
             android:layout_marginTop="@dimen/nav_back_button_top"
@@ -86,7 +102,7 @@
             android:layout_marginBottom="200dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_home_profile"
+            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
             app:layout_constraintBottom_toBottomOf="parent" >
             <TextView
                 style="@style/TextAppearance.Kamleon.Book"
@@ -131,7 +147,7 @@
             app:trackColor="@color/white40"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_home_profile"
+            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 <!--
