--- a/KamleonApp/app/src/main/res/layout/activity_privacy.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_privacy.xml
@@ -56,6 +56,7 @@
                 android:text="test"
                 android:textColor="@color/kamleon_secondary_grey_70"
                 style="@style/CircularRegularFont"
+                android:textSize="@dimen/ts_16"
                 android:paddingTop="4dp"
                 android:paddingStart="16dp"/>
         </LinearLayout>
@@ -79,6 +80,7 @@
                 android:textColor="@color/kamleon_secondary_grey_70"
                 android:text="@string/privacy_item1"
                 style="@style/CircularRegularFont"
+                android:textSize="@dimen/ts_16"
                 android:paddingTop="4dp"
                 android:paddingStart="16dp"/>
         </LinearLayout>
@@ -103,6 +105,7 @@
                 android:text="@string/privacy_item1"
                 style="@style/CircularRegularFont"
                 android:paddingTop="4dp"
+                android:textSize="@dimen/ts_16"
                 android:paddingStart="16dp"/>
         </LinearLayout>
         <TextView
@@ -112,6 +115,7 @@
             style="@style/CircularRegularFont"
             android:textColor="@color/kamleon_secondary_grey_50"
             android:layout_marginTop="24dp"
+            android:textSize="@dimen/ts_14"
             android:paddingEnd="16dp"/>
     </LinearLayout>
 
