--- a/KamleonApp/app/src/main/res/layout/activity_home.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_home.xml
@@ -54,13 +54,21 @@
                 android:layout_marginBottom="@dimen/margin_bottom_header"
                 app:cardCornerRadius="18dp"
                 android:id="@+id/cv_home_profile"
-                android:elevation="8dp">
+                android:elevation="8dp"
+                app:cardBackgroundColor="?attr/colorSurfaceInverse">
+            <TextView
+                    android:id="@+id/tv_home_profile_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/default_value"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Body1"
+                    android:textColor="?attr/colorOnSurfaceInverse"
+                    android:layout_gravity="center"/>
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:src="@drawable/image_profile"
-                    android:id="@+id/iv_home_profile"
-                    android:layout_gravity="center"/>
+                    android:visibility="invisible"
+                    android:id="@+id/iv_home_profile"/>
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
