--- a/KamleonApp/app/src/main/res/layout/activity_analytic.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_analytic.xml
@@ -13,7 +13,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:importantForAccessibility="no" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -146,21 +147,30 @@
 
         </ScrollView>
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_analytic_profile"
             android:layout_width="36dp"
             android:layout_height="36dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginEnd="@dimen/margin_horizontal_header"
+            android:layout_marginTop="@dimen/margin_top_header"
+            android:layout_marginBottom="@dimen/margin_bottom_header"
             app:cardCornerRadius="18dp"
-            android:id="@+id/cv_analytic_profile"
-            android:elevation="8dp">
+            android:elevation="8dp"
+            app:cardBackgroundColor="?attr/colorSurfaceInverse">
+            <TextView
+                android:id="@+id/tv_analytic_profile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_value"
+                android:textAppearance="@style/TextAppearance.Kamleon.Body1"
+                android:textColor="?attr/colorOnSurfaceInverse"
+                android:layout_gravity="center"/>
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_analytic_profile"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/image_profile"
-                android:id="@+id/iv_analytic_profile"
-                android:layout_gravity="center"/>
+                android:visibility="invisible"/>
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
