--- a/KamleonApp/app/src/main/res/navigation/main_nav.xml
+++ b/KamleonApp/app/src/main/res/navigation/main_nav.xml
@@ -47,6 +47,9 @@
         android:name="com.dynatech2012.kamleonuserapp.fragments.GraphicsFragment"
         android:label="activity_graphics"
         tools:layout="@layout/activity_graphics" >
+        <action
+            android:id="@+id/action_graphicsFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
     </fragment>
 
     <fragment
