--- a/KamleonApp/app/src/main/res/drawable/ic_camera.xml
+++ b/KamleonApp/app/src/main/res/drawable/ic_camera.xml
@@ -1,22 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="15dp"
-    android:height="13dp"
-    android:viewportWidth="15"
-    android:viewportHeight="13">
+    android:width="65.87dp"
+    android:height="63.82dp"
+    android:viewportWidth="65.87"
+    android:viewportHeight="63.82">
   <path
-      android:pathData="M7.017,9.132C8.052,9.132 8.892,8.293 8.892,7.257C8.892,6.222 8.052,5.382 7.017,5.382C5.981,5.382 5.142,6.222 5.142,7.257C5.142,8.293 5.981,9.132 7.017,9.132Z"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M5.628,12.257H8.406C10.356,12.257 11.332,12.257 12.033,11.798C12.335,11.6 12.595,11.344 12.799,11.045C13.267,10.358 13.267,9.4 13.267,7.485C13.267,5.569 13.267,4.612 12.799,3.924C12.595,3.626 12.335,3.37 12.033,3.172C11.583,2.876 11.019,2.77 10.156,2.733C9.744,2.733 9.389,2.427 9.309,2.03C9.247,1.739 9.087,1.479 8.856,1.292C8.624,1.106 8.335,1.005 8.038,1.007H5.996C5.378,1.007 4.846,1.435 4.725,2.03C4.644,2.427 4.29,2.733 3.878,2.733C3.016,2.77 2.452,2.877 2.001,3.172C1.699,3.37 1.439,3.626 1.236,3.924C0.767,4.612 0.767,5.569 0.767,7.485C0.767,9.4 0.767,10.357 1.235,11.045C1.437,11.343 1.697,11.599 2.001,11.798C2.702,12.257 3.677,12.257 5.628,12.257Z"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M11.392,5.382H10.767"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:pathData="m46.99,11.97c7.31,0.39 13.12,6.44 13.12,13.84v19.36c0,7.66 -6.21,13.86 -13.86,13.86h-26.61c-7.66,0 -13.86,-6.21 -13.86,-13.86v-19.36c0,-7.41 5.81,-13.46 13.12,-13.84m14.05,11.86c-6.44,0 -11.66,5.22 -11.66,11.66s5.22,11.66 11.66,11.66 11.66,-5.22 11.66,-11.66 -5.22,-11.66 -11.66,-11.66ZM53.21,22.79c0,-1.94 -1.58,-3.52 -3.52,-3.52 -1.94,0 -3.52,1.58 -3.52,3.52 0,1.94 1.58,3.52 3.52,3.52s3.52,-1.58 3.52,-3.52ZM47,11.97c-1.95,0 -3.53,-1.58 -3.53,-3.53v-0.15c0,-1.94 -1.58,-3.52 -3.52,-3.52h-14c-1.94,0 -3.52,1.58 -3.52,3.52v0.16c0,1.95 -1.58,3.53 -3.53,3.53"
+      android:strokeWidth="0"
+      android:fillColor="#231f20"/>
 </vector>
