--- a/KamleonApp/app/src/main/res/layout/activity_graphics.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_graphics.xml
@@ -45,16 +45,16 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            style="@style/CircularMediumFont"
+            android:id="@+id/tvNavTitle"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:id="@+id/tvNavTitle"
             android:layout_centerHorizontal="true"
             android:gravity="center_vertical"
             android:layout_marginTop="@dimen/margin_top_header"
             android:layout_marginBottom="@dimen/margin_bottom_header"
-            android:text="HYDRATION"
+            tools:text="HYDRATION"
             android:textColor="@color/kamleon_secondary_grey_50"
+            android:textAppearance="@style/TextAppearance.Kamleon.Subtitle1"
             android:textSize="@dimen/ts_16" />
 
         <androidx.cardview.widget.CardView
@@ -67,14 +67,14 @@
             app:cardCornerRadius="18dp"
             android:id="@+id/cv_graph_profile"
             android:elevation="8dp"
-            app:cardBackgroundColor="?attr/colorSurfaceInverse">
+            app:cardBackgroundColor="?attr/colorSurface">
             <TextView
                 android:id="@+id/tv_graphic_profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_value"
                 android:textAppearance="@style/TextAppearance.Kamleon.Body1"
-                android:textColor="?attr/colorOnSurfaceInverse"
+                android:textColor="@color/kamleon_secondary_grey_60"
                 android:layout_gravity="center"/>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="36dp"
