--- a/KamleonApp/app/src/main/res/values/dimens.xml
+++ b/KamleonApp/app/src/main/res/values/dimens.xml
@@ -72,6 +72,7 @@
     <dimen name="kmln_graph_label_average_percent_text_size">16sp</dimen>
     <dimen name="kmln_graph_label_average_datetime_text_size">12sp</dimen>
 
+    <dimen name="kmln_graph_min_max_label_text_size">10sp</dimen>
     <dimen name="kmln_graph_x_axis_label_text_size">12sp</dimen>
     <dimen name="kmln_graph_y_axis_label_text_size">14sp</dimen>
 
